# repopath-sanitizer

./: .gitignore  DEVELOPMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USER_GUIDE.md  pyproject.toml  requirements.txt  setup.sh
.githooks/: pre-commit
data/: repopath-sanitizer.desktop
debian/: changelog  control  copyright  install  repopath-sanitizer.desktop  repopath-sanitizer.install  rules
global-hooks/: README.md  pre-commit-windows-paths
repopath_sanitizer/: __init__.py  __main__.py  git_scanner.py  main_window.py  path_validator.py  report_generator.py
repopath_sanitizer/i18n/: __init__.py
src/repopath_sanitizer/: __main__.py  cli.py  constants.py  diagnostics.py  engine.py  gitutils.py  models.py  pathrules.py  report.py  state.py  ui_main.py  worker.py
tests/: test_diagnostics.py  test_engine.py  test_pathrules.py
tests/fixtures/: README.md
translations/: README.md
